Opened 8 years ago
Closed 8 years ago
#7477 closed defect (fixed)
AAC duplicate channel element regression
| Reported by: | Hendrik | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | aac regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description (last modified by )
Summary of the bug:
The attached AAC file stops decoding after 40c2f870aec923894692752718193404151b17b2 with duplicate channel element console spam
How to reproduce:
% ffmpeg -i duplicate_che.aac out.wav
ffmpeg version N-92115-g50a2347b19 Copyright (c) 2000-2018 the FFmpeg developers
built with gcc 8.2.1 (GCC) 20180813
configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvorbis --enable-libvo-amrwbenc --enable-libmysofa --enable-libspeex --enable-libxvid --enable-libaom --enable-libmfx --enable-amf --enable-ffnvcodec --enable-cuvid --enable-d3d11va --enable-nvenc --enable-nvdec --enable-dxva2 --enable-avisynth
libavutil 56. 19.101 / 56. 19.101
libavcodec 58. 32.100 / 58. 32.100
libavformat 58. 18.104 / 58. 18.104
libavdevice 58. 4.105 / 58. 4.105
libavfilter 7. 33.100 / 7. 33.100
libswscale 5. 2.100 / 5. 2.100
libswresample 3. 2.100 / 3. 2.100
libpostproc 55. 2.100 / 55. 2.100
[aac @ 000002ccc029c600] channel element 1.0 duplicate
Last message repeated 469 times
[aac @ 000002ccc028a380] decoding for stream 0 failed
[aac @ 000002ccc028a380] Estimating duration from bitrate, this may be inaccurate
[aac @ 000002ccc028a380] Could not find codec parameters for stream 0 (Audio: aac (HE-AAC), 5.1, fltp, 252 kb/s): unspecified sample rate
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, aac, from 'duplicate_che.aac':
Duration: 00:00:20.46, bitrate: 252 kb/s
Stream #0:0: Audio: aac (HE-AAC), 5.1, fltp, 252 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (aac (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
[aac @ 000002ccc06a00c0] channel element 1.0 duplicate
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 000002ccc06a00c0] channel element 1.0 duplicate
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 000002ccc06a00c0] channel element 1.0 duplicate
Error while decoding stream #0:0: Invalid data found when processing input
[aac @ 000002ccc06a00c0] channel element 1.0 duplicate
Error while decoding stream #0:0: Invalid data found when processing input
[.... snip ....]
[abuffer @ 000002ccc0832cc0] Value inf for parameter 'time_base' out of range [0 - 2.14748e+09]
Last message repeated 3 times
[abuffer @ 000002ccc0832cc0] Error setting option time_base to value 1/0.
[graph_0_in_0_0 @ 000002ccc0293600] Error applying options to the filter.
Error reinitializing filters!
Error while filtering: Result too large
Finishing stream 0:0 without any data written to it.
[abuffer @ 000002ccc0832cc0] Value inf for parameter 'time_base' out of range [0 - 2.14748e+09]
Last message repeated 3 times
[abuffer @ 000002ccc0832cc0] Error setting option time_base to value 1/0.
[graph_0_in_0_0 @ 000002ccc08df080] Error applying options to the filter.
Error configuring filter graph
Conversion failed!
Attachments (1)
Change History (6)
by , 8 years ago
| Attachment: | duplicate_che.aac added |
|---|
comment:1 by , 8 years ago
| Description: | modified (diff) |
|---|
comment:2 by , 8 years ago
comment:3 by , 8 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | regression added |
| Version: | unspecified → git-master |
comment:5 by , 8 years ago
| Keywords: | aac added |
|---|---|
| Priority: | normal → important |
| Resolution: | → fixed |
| Status: | new → closed |
Fixed by Michael in 8f1524802469cb701040561cd05a9a924dec3627
Note:
See TracTickets
for help on using tickets.



Just to confirm, reverting the mentioned commit above does in fact fully fix it, and it decodes even without any warnings.